<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.company.mtbp</groupId>
    <artifactId>movie-ticket-booking-platform</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>mtbp-company-bom</module>
        <module>mtbp-shared-dto</module>
        <module>mtbp-shared-utils</module>
        <module>customer-service</module>
        <module>booking-service</module>
        <module>payment-service</module>
        <module>inventory-service</module>
        <module>theatre-partner-service</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring.boot.version>3.5.5</spring.boot.version>
        <owasp.dependency.version>12.1.6</owasp.dependency.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.company.mtbp</groupId>
                <artifactId>mtbp-company-bom</artifactId>
                <version>1.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <!-- OWASP Dependency Check profile -->
    <profiles>
        <profile>
            <id>owasp-check</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>${owasp.dependency.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                                <configuration>
                                    <failBuildOnCVSS>9</failBuildOnCVSS>
                                    <nvdApiKeyEnvironmentVariable>NVD_API_KEY</nvdApiKeyEnvironmentVariable>
                                    <formats>
                                        <format>HTML</format>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
